<resources>
    <string name="app_name">My New Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="header_title">My App</string>
    <string name="homepagecontent1">Content 1</string>
    <string name="homepagecontent2">Content 2</string>
    <string name="homepagecontent3">Content 3</string>
    <string name="homepagecontent">Recipe List</string>
    <string name="btn_text">See Detail</string>
    <string name="btn_detailpage">Add to Favorite</string>
    <string name="title_content_list">TITLE</string>
    <string name="desc_content_list">DESC</string>
    <string name="detail_content_list">DETAIL</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <!--Recipes-->
    <string name="fragment_recipes_label">Recipes</string>
    <string name="recipes_menu_search_hint">Ingredients:</string>
    <string name="recipes_no_more_recipes">That\'s all we have matching with those ingredients!</string>
    <string name="recipes_no_results">No results for that search.. try something else!</string>

    <!--Recipe Details-->
    <string name="fragment_recipe_details_label">Recipe Details</string>
    <string name="recipe_details_no_href">Sorry, cannot access to the details of this recipe.\nPlease contact our support team, thanks!</string>

    <!--Favorite Recipes-->
    <string name="fragment_favorite_recipes_label">Favorite Recipes</string>
    <string name="recipes_no_fav_results">There aren\'t any recipes saved yet!</string>
</resources>