<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.mynewapplication.kotlinpackage.features.presentation.recipes.RecipesFragment"
        android:label="@string/fragment_recipes_label"
        tools:layout="@layout/activity_content_list">

        <action
            android:id="@+id/action_recipesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment"/>

        <action
            android:id="@+id/action_recipesFragment_to_favoriteRecipesFragment"
            app:destination="@id/favoriteRecipesFragment"/>

    </fragment>

    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.example.mynewapplication.kotlinpackage.features.presentation.recipedetails.RecipeDetailsFragment"
        android:label="@string/fragment_recipe_details_label"
        tools:layout="@layout/fragment_recipe_details">

        <argument
            android:name="href"
            android:defaultValue="href"
            app:argType="string"/>

        <argument
            android:name="name"
            android:defaultValue="name"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="com.example.mynewapplication.kotlinpackage.features.presentation.favoriterecipes.FavoriteRecipesFragment"
        android:label="@string/fragment_favorite_recipes_label"
        tools:layout="@layout/fragment_favorite_recipes">

        <action
            android:id="@+id/action_favoriteRecipesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment"/>

    </fragment>

</navigation>
