<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@color/text_grey"
    tools:context=".kotlinpackage.KotlinActivity.ContentListActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                android:background="@color/white"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_header"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_title"
                android:textColor="@color/textview"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/ib_profile"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                android:background="@color/white"/>

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_contentlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:overScrollMode="never"
        android:layout_marginBottom="60dp"
        android:clipToPadding="true"
        tools:listitem="@layout/layout_recyclerview_contentlist"/>

    <RelativeLayout
        android:id="@+id/rl_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:elevation="30dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/bottom_menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/iv_bookmark_menu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_bookmark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_bookmark_menu"
                    android:text="@string/bookmark"
                    android:textStyle="bold"
                    android:textColor="@color/textview"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/iv_favorite_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_favorite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_favorite_menu"
                    android:text="@string/favorite"
                    android:textStyle="bold"
                    android:textColor="@color/textview"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/iv_settings_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_settings"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_settings_menu"
                    android:text="@string/settings"
                    android:textStyle="bold"
                    android:textColor="@color/textview"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>