<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentDetailActivity">

    <FrameLayout
        android:id="@+id/fl_img_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/burger"
            android:adjustViewBounds="true"/>

<!--        <RelativeLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom | end"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_marginBottom="30dp">-->

<!--            <Button-->
<!--                android:id="@+id/btn_contentlist"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:background="@drawable/button_border"-->
<!--                android:text="@string/btn_text"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="10sp"-->
<!--                android:textStyle="bold" />-->

<!--        </RelativeLayout>-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top |left"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white"
                android:background="@color/transparent"/>

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/fl_img_detail">

        <RelativeLayout
            android:id="@+id/rl_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/title_content_list"
                android:textColor="@color/textview"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_detail"
                android:layout_centerHorizontal="true"
                android:text="@string/desc_content_list"
                android:textColor="@color/textview"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rl_detail_title">

            <RelativeLayout
                android:id="@+id/rl_detail_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tv_detail1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/detail_content_list"
                    android:textColor="@color/textview"/>

                <TextView
                    android:id="@+id/tv_detail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/textview"
                    android:text="@string/detail_content_list"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_detail_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_detail_1"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tv_detail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/detail_content_list"
                    android:textColor="@color/textview"/>

                <TextView
                    android:id="@+id/tv_detail4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/textview"
                    android:text="@string/detail_content_list"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_detail_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_detail_2"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tv_detail5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/detail_content_list"
                    android:textColor="@color/textview"/>

                <TextView
                    android:id="@+id/tv_detail6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/textview"
                    android:text="@string/detail_content_list"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_detail_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_detail_3">

                <TextView
                    android:id="@+id/tv_detail7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/detail_content_list"
                    android:textColor="@color/textview"/>

                <TextView
                    android:id="@+id/tv_detail8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/textview"
                    android:text="@string/detail_content_list"/>

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_grey"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_margin="15dp"
                android:text="@string/btn_detailpage"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>